samples/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: whoami
  name: whoami
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: whoami
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - image: jwilder/whoami
          name: whoami
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 5m
              memory: 10Mi
