samples/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  type: ClusterIP
