samples/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  rules:
    - host: whoami-pod.k8s-sample-gke.jchengdev.com  # <TODO> use Kustomize to extract hardcoded DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 8000
